src/test/deca/syntax/valid/include-usingClasses.deca
#include "includeFile-withClasses.decah"

{
    A a = new A();
    print(a.method);
    print(caNeSertARienInstancierDansLeTestSynth);
}