src/test/deca/syntax/invalid/include-instructionBeforeDeclaration.deca
{
    #include "includeFile-withInstruction.decah"
    int a = 3;
}